--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -57,11 +57,25 @@
             android:layout_below="@id/password"
             android:layout_alignEnd="@+id/password"
             android:layout_alignRight="@+id/password"
-            android:layout_marginTop="19dp"
-            android:layout_marginEnd="2dp"
-            android:layout_marginRight="2dp"
+            android:layout_marginTop="13dp"
+            android:layout_marginEnd="197dp"
+            android:layout_marginRight="197dp"
             android:background="@color/colorPrimary"
             android:text="@string/certify"
+            android:textColor="@android:color/white" />
+
+        <Button
+            android:id="@+id/btn_reg"
+            android:layout_width="153dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/password"
+            android:layout_alignEnd="@+id/password"
+            android:layout_alignRight="@+id/password"
+            android:layout_marginTop="13dp"
+            android:layout_marginEnd="-1dp"
+            android:layout_marginRight="-2dp"
+            android:background="@color/colorPrimary"
+            android:text="註冊"
             android:textColor="@android:color/white" />
 
         <CheckBox
@@ -69,9 +83,9 @@
             android:layout_width="153dp"
             android:layout_height="wrap_content"
             android:layout_below="@+id/password"
-            android:layout_marginTop="25dp"
-            android:layout_marginEnd="27dp"
-            android:layout_marginRight="27dp"
+            android:layout_marginTop="19dp"
+            android:layout_marginEnd="196dp"
+            android:layout_marginRight="196dp"
             android:layout_toStartOf="@+id/btn_certify"
             android:layout_toLeftOf="@+id/btn_certify"
             android:text="記住帳號密碼" />
