--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -10,6 +10,8 @@
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
         tools:layout_editor_absoluteX="0dp">
 
         <TextView
@@ -32,7 +34,7 @@
             android:layout_marginRight="20dp"
             android:background="@color/username_password"
             android:hint="@string/username"
-            android:inputType="textPersonName"
+            android:inputType="textPersonName|textNoSuggestions"
             android:padding="15dp"
             android:textSize="15sp" />
 
@@ -46,7 +48,7 @@
             android:layout_marginRight="20dp"
             android:background="@color/username_password"
             android:hint="@string/password"
-            android:inputType="textPassword"
+            android:inputType="textPassword|textNoSuggestions"
             android:padding="15dp"
             android:textSize="15sp" />
 
