--- a/app/src/main/res/layout/listview2_layout.xml
+++ b/app/src/main/res/layout/listview2_layout.xml
@@ -17,7 +17,7 @@
 
         <TextView
             android:id="@+id/name"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="bottom|center_horizontal"
@@ -27,7 +27,7 @@
 
         <TextView
             android:id="@+id/number"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="bottom|center_horizontal"
@@ -36,7 +36,7 @@
 
         <ImageView
             android:id="@+id/item_aro"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="bottom|center_horizontal"
