--- a/app/src/main/res/layout/row_item.xml
+++ b/app/src/main/res/layout/row_item.xml
@@ -27,7 +27,7 @@
         <ImageView
             android:id="@+id/item_info"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             android:gravity="bottom|center_horizontal"
             android:src="@android:drawable/star_on"
