--- a/app/src/main/res/layout/fragment_record.xml
+++ b/app/src/main/res/layout/fragment_record.xml
@@ -1,20 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".record">
 
     <!-- TODO: Update blank fragment layout -->
+
+    <Button
+        android:id="@+id/btnChangeCamera"
+        android:layout_width="88dp"
+        android:layout_height="91dp"
+        android:layout_marginStart="480dp"
+        android:background="@drawable/flip_front"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <LinearLayout
+        android:id="@+id/linearLayout3"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <FrameLayout
             android:id="@+id/camera_preview"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight=".65" />
+            android:layout_weight=".65">
+
+        </FrameLayout>
 
         <LinearLayout
             android:id="@+id/example"
@@ -26,17 +44,31 @@
 
             <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="0dp"
+                android:layout_height="112dp"
                 android:layout_weight=".25">
 
-                <Button
-                    android:id="@+id/btnChangeCamera"
-                    android:layout_width="138dp"
-                    android:layout_height="119dp"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_weight=".05"
-                    android:background="@drawable/flip_front"
-                    android:gravity="center" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/ShowDire"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center"
+                        android:text="TextView"
+                        android:textSize="36sp" />
+
+                    <ImageView
+
+                        android:id="@+id/ShowImg"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:src="@drawable/a1" />
+
+                </LinearLayout>
 
             </FrameLayout>
 
@@ -60,14 +92,20 @@
 
                 <Button
                     android:id="@+id/btnRecordVideo"
-                    android:layout_width="114dp"
-                    android:layout_height="133dp"
+                    android:layout_width="108dp"
+                    android:layout_height="89dp"
                     android:layout_gravity="center_horizontal"
-                    android:layout_weight=".05"
 
 
                     android:background="@drawable/video_camera"
                     android:gravity="center" />
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                </LinearLayout>
 
             </FrameLayout>
 
@@ -76,4 +114,4 @@
 
     </LinearLayout>
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
